Wrap NEWS -- history of user-visible changes.

Copyright (C) 1996-2019 Paul J. Lucas.
See the end of the file for license conditions.

-------------------------------------------------------------------------------

* Changes in Wrap 5.3.1

** Fixed ordered list hang indent
Fixed hang-indent for ordered lists >= 10.


* Changes in Wrap 5.3

** Doxygen support
Doxygen-marked-up comments are now wrapped appropriately by wrapc via either
the doxygen or -x option.

** Block characters replaced by regular expression.
The --block-chars option has been replaced by the --block-regex option and its
argument is now treated as a regular expression.  (The short option is still
-b.)


* Changes in Wrap 5.2

** Added support for Simula comments
Wrapc can now automatically recognize and properly wrap Simula comments.


* Changes in Wrap 5.1

** End‐of‐line comment aligning improvement.
Now aligns only comments that are really at the end of the line (as opposed to
within a line).  It also does not align comments unless there is more than one
"token" on the line.


* Changes in Wrap 5.0

** End‐of‐line comment aligning.
Wrapc can now align end-of-line comments at a given column.

** Alias importing.
Aliases in configuration files can now import other aliases.

** More lenient alias names.
In addition to alphanumeric and the underscore character, alias names may now
also use any of the +-.: characters.


* Changes in Wrap 4.11

** Better handling of --comment-chars/-D value.
Wrapc now accepts only punctuation characters for the --comment-chars/-D value.
Duplicated characters may be given, but are ignored.  Whitespace is also
ignored.

** Wrap to terminal width.
Wrap and wrapc now accept one of "t", "term", or "terminal" as an argument to
either the --width or -w option to set the line width to the width of the
terminal in which either wrap or wrapc is running.


* Changes in Wrap 4.10

** Long command-line options.