@@ -1,0 +1,4 @@
+    // When wrapped, there should be no additional line added.
+    //
+    //
+    printf( "hello, world\n" );
