@@ -1,0 +1,1 @@
+wrapc | /dev/null | | test_08.c | 0
